Update HashingAssignment.java changed MD5 to SHA-256